--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -19,6 +23,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 12.5% 0 12.5%;
+}
+
+.header {
+    display: flex;
+    background-color: #1F2937;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 ul {
@@ -27,7 +39,6 @@ ul {
     list-style: none;
     margin: 0px;
     padding: 0px;
-    margin-right: 20vh;
     align-items: center;
 }
 
@@ -40,6 +51,35 @@ a {
 .logo {
     font-size: 18px;
     color: #F9FAF8;
-    margin-left: 20vh;
     font-weight: bold;
+}
+
+p {
+    font-size: 18px;
+    color:#c6c6c6;
+}
+
+.image {
+    background-color: #707070;
+    min-height: 200px;
+    min-width: 400px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:#F9FAF8;
+}
+
+.main-text {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.first-button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: none;
+    border-radius: 2px;
+    padding: 5px 20px 5px 20px;
 }
